--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "@angular/router": "^14.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
+    "@types/echarts": "^4.9.16",
     "bootstrap": "^5.2.1",
+    "chart.js": "^3.9.1",
+    "echarts": "^5.4.0",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-echarts": "^14.0.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.38",
     "tslib": "^2.3.0",
